<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/passsingin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/button_glevels"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/main_background"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="476dp"
        android:background="@drawable/style_txt"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="152dp"
        android:layout_marginTop="383dp"
        android:layout_marginEnd="49dp"
        android:background="@drawable/style_txt"
        android:backgroundTint="#00B599"
        android:ems="10"
        android:fontFamily="@font/comfortaa_bold"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/login"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="152dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="49dp"
        android:background="@drawable/style_txt"
        android:backgroundTint="#00B599"
        android:ems="10"
        android:fontFamily="@font/comfortaa_bold"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF" />


    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="381dp"
        android:layout_marginBottom="311dp"
        android:background="@drawable/style_txt"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/email"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="480dp"
        android:layout_marginBottom="212dp"
        android:background="@drawable/style_txt"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/password"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_log"
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="88dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="84dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/registred" />

    <TextView
        android:id="@+id/regNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_log"
        android:layout_alignStart="@+id/btn_log"
        android:layout_alignEnd="@+id/btn_log"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-86dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="-86dp"
        android:layout_marginBottom="53dp"
        android:fontFamily="@font/comfortaa_bold"
        android:gravity="center"
        android:text="@string/loginNow"
        android:textSize="16sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="178dp"
        android:layout_marginTop="304dp"
        android:layout_marginEnd="185dp" />


</RelativeLayout>